--- a/fanti.conf
+++ b/fanti.conf
@@ -12,7 +12,7 @@
 #             Second entry behind the comma is for when dosbox is not focused/minimized.
 # mapperfile -- File used to load/save the key/event mappings from.
 
-fullscreen=true
+fullscreen=false
 fulldouble=false
 fullfixed=true
 fullresolution=640x480
